// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`geoJsonToOSMChange can convert files with LineString 1`] = `
"
<osmChange version=\\"0.6\\" generator=\\"LINZ Data Import\\" LINZ_title=\\"test layer\\" LINZ_count=\\"add 1\\" LINZ_generated_on=\\"DATE_GOES_HERE\\">
  <create>
    <node id=\\"-1\\" lon=\\"174.5\\" lat=\\"-37\\" version=\\"0\\" />
    <node id=\\"-2\\" lon=\\"174.6\\" lat=\\"-37\\" version=\\"0\\" />
    
    <way id=\\"-1\\" version=\\"0\\">
      <nd ref=\\"-1\\" />
      <nd ref=\\"-2\\" />
      <tag k=\\"highway\\" v=\\"footway\\" />
    </way>
  
  </create>
  <modify />
  <delete if-unused=\\"true\\" />
</osmChange>"
`;

exports[`geoJsonToOSMChange can convert files with MultiPolygon 1`] = `
"
<osmChange version=\\"0.6\\" generator=\\"LINZ Data Import\\" LINZ_title=\\"test layer\\" LINZ_count=\\"add 1\\" LINZ_generated_on=\\"DATE_GOES_HERE\\">
  <create>
    <node id=\\"-1\\" lon=\\"1\\" lat=\\"2\\" version=\\"0\\" />
    <node id=\\"-2\\" lon=\\"3\\" lat=\\"4\\" version=\\"0\\" />
    <node id=\\"-3\\" lon=\\"5\\" lat=\\"6\\" version=\\"0\\" />
    <node id=\\"-4\\" lon=\\"7\\" lat=\\"8\\" version=\\"0\\" />
    
        <way id=\\"-1\\" version=\\"0\\">
          <nd ref=\\"-1\\" />
    <nd ref=\\"-2\\" />
    <nd ref=\\"-3\\" />
    <nd ref=\\"-4\\" />
        </way>
      <node id=\\"-5\\" lon=\\"15\\" lat=\\"16\\" version=\\"0\\" />
    <node id=\\"-6\\" lon=\\"17\\" lat=\\"18\\" version=\\"0\\" />
    <node id=\\"-7\\" lon=\\"19\\" lat=\\"20\\" version=\\"0\\" />
    <node id=\\"-8\\" lon=\\"21\\" lat=\\"22\\" version=\\"0\\" />
    
        <way id=\\"-2\\" version=\\"0\\">
          <nd ref=\\"-5\\" />
    <nd ref=\\"-6\\" />
    <nd ref=\\"-7\\" />
    <nd ref=\\"-8\\" />
        </way>
      <node id=\\"-9\\" lon=\\"23\\" lat=\\"24\\" version=\\"0\\" />
    <node id=\\"-10\\" lon=\\"25\\" lat=\\"26\\" version=\\"0\\" />
    <node id=\\"-11\\" lon=\\"27\\" lat=\\"28\\" version=\\"0\\" />
    
        <way id=\\"-3\\" version=\\"0\\">
          <nd ref=\\"-9\\" />
    <nd ref=\\"-10\\" />
    <nd ref=\\"-11\\" />
        </way>
      <node id=\\"-12\\" lon=\\"9\\" lat=\\"10\\" version=\\"0\\" />
    <node id=\\"-13\\" lon=\\"11\\" lat=\\"12\\" version=\\"0\\" />
    <node id=\\"-14\\" lon=\\"13\\" lat=\\"14\\" version=\\"0\\" />
    
        <way id=\\"-4\\" version=\\"0\\">
          <nd ref=\\"-12\\" />
    <nd ref=\\"-13\\" />
    <nd ref=\\"-14\\" />
        </way>
      
    <relation id=\\"-1\\" version=\\"0\\">
      <member type=\\"way\\" role=\\"outer\\" ref=\\"-1\\"/>
     <member type=\\"way\\" role=\\"inner\\" ref=\\"-2\\"/>
     <member type=\\"way\\" role=\\"inner\\" ref=\\"-3\\"/>
     <member type=\\"way\\" role=\\"outer\\" ref=\\"-4\\"/>
      <tag k=\\"ref\\" v=\\"1\\" />
      <tag k=\\"landuse\\" v=\\"aquaculture\\" />
    </relation>
  
  </create>
  <modify />
  <delete if-unused=\\"true\\" />
</osmChange>"
`;

exports[`geoJsonToOSMChange can convert files with Point 1`] = `
"
<osmChange version=\\"0.6\\" generator=\\"LINZ Data Import\\" LINZ_title=\\"test layer\\" LINZ_count=\\"add 1\\" LINZ_generated_on=\\"DATE_GOES_HERE\\">
  <create>
    
    <node id=\\"-1\\" lon=\\"174.7\\" lat=\\"-36.9\\" version=\\"0\\">
      <tag k=\\"natural\\" v=\\"peak\\" />
    </node>
  </create>
  <modify />
  <delete if-unused=\\"true\\" />
</osmChange>"
`;

exports[`geoJsonToOSMChange can convert files with Polygon 1`] = `
"
<osmChange version=\\"0.6\\" generator=\\"LINZ Data Import\\" LINZ_title=\\"test layer\\" LINZ_count=\\"add 1\\" LINZ_generated_on=\\"DATE_GOES_HERE\\">
  <create>
    <node id=\\"-1\\" lon=\\"174.8\\" lat=\\"-36.9\\" version=\\"0\\" />
    <node id=\\"-2\\" lon=\\"174.81\\" lat=\\"-36.91\\" version=\\"0\\" />
    <node id=\\"-3\\" lon=\\"174.82\\" lat=\\"-36.92\\" version=\\"0\\" />
    <node id=\\"-4\\" lon=\\"174.8\\" lat=\\"-36.9\\" version=\\"0\\" />
    
    <way id=\\"-1\\" version=\\"0\\">
      <nd ref=\\"-1\\" />
      <nd ref=\\"-2\\" />
      <nd ref=\\"-3\\" />
      <nd ref=\\"-4\\" />
      <tag k=\\"ref\\" v=\\"1\\" />
      <tag k=\\"landuse\\" v=\\"aquaculture\\" />
    </way>
  
  </create>
  <modify />
  <delete if-unused=\\"true\\" />
</osmChange>"
`;

exports[`geoJsonToOSMChange can convert files with all features 1`] = `
"
<osmChange version=\\"0.6\\" generator=\\"LINZ Data Import\\" LINZ_title=\\"test layer\\" LINZ_count=\\"add 4\\" LINZ_generated_on=\\"DATE_GOES_HERE\\">
  <create>
    
    <node id=\\"-1\\" lon=\\"174.7\\" lat=\\"-36.9\\" version=\\"0\\">
      <tag k=\\"natural\\" v=\\"peak\\" />
    </node><node id=\\"-2\\" lon=\\"174.5\\" lat=\\"-37\\" version=\\"0\\" />
    <node id=\\"-3\\" lon=\\"174.6\\" lat=\\"-37\\" version=\\"0\\" />
    
    <way id=\\"-1\\" version=\\"0\\">
      <nd ref=\\"-2\\" />
      <nd ref=\\"-3\\" />
      <tag k=\\"highway\\" v=\\"footway\\" />
    </way>
  <node id=\\"-4\\" lon=\\"174.8\\" lat=\\"-36.9\\" version=\\"0\\" />
    <node id=\\"-5\\" lon=\\"174.81\\" lat=\\"-36.91\\" version=\\"0\\" />
    <node id=\\"-6\\" lon=\\"174.82\\" lat=\\"-36.92\\" version=\\"0\\" />
    <node id=\\"-7\\" lon=\\"174.8\\" lat=\\"-36.9\\" version=\\"0\\" />
    
    <way id=\\"-2\\" version=\\"0\\">
      <nd ref=\\"-4\\" />
      <nd ref=\\"-5\\" />
      <nd ref=\\"-6\\" />
      <nd ref=\\"-7\\" />
      <tag k=\\"ref\\" v=\\"1\\" />
      <tag k=\\"landuse\\" v=\\"aquaculture\\" />
    </way>
  <node id=\\"-8\\" lon=\\"174.5\\" lat=\\"-37\\" version=\\"0\\" />
    <node id=\\"-9\\" lon=\\"174.6\\" lat=\\"-37\\" version=\\"0\\" />
    
    <way id=\\"-3\\" version=\\"0\\">
      <nd ref=\\"-8\\" />
      <nd ref=\\"-9\\" />
      <tag k=\\"highway\\" v=\\"footway\\" />
    </way>
  
  </create>
  <modify />
  <delete if-unused=\\"true\\" />
</osmChange>"
`;
